--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@coreui/utils": "^1.3.1",
     "antd": "^4.4.1",
     "axios": "^0.19.2",
+    "bootstrap4-toggle": "^3.6.1",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "date-fns": "^2.14.0",
